examples/test/testpolicy13708.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13708
  namespace: namespace158
spec:
  podSelector:
    matchLabels:
      key45: value25
      key23: value12
      key43: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value14
          key9: value23
      podSelector:
        matchLabels:
          key8: value39
          key17: value12
          key29: value30
